# serializer version: 1
# name: test_entities[event.front_door_front_door_doorbell_chime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <DoorbellEventType.RING: 'ring'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.front_door_front_door_doorbell_chime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Chime',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.DOORBELL: 'doorbell'>,
    'original_icon': None,
    'original_name': 'Chime',
    'platform': 'nest_legacy',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'chime',
    'unique_id': '18B430CCCCCC0002-chime',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[event.front_door_front_door_doorbell_chime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by Google/Nest',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'doorbell',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <DoorbellEventType.RING: 'ring'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Front Door Doorbell Chime',
    }),
    'context': <ANY>,
    'entity_id': 'event.front_door_front_door_doorbell_chime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[event.front_door_front_door_doorbell_motion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'camera_motion',
        'camera_person',
        'camera_sound',
        'camera_face',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.front_door_front_door_doorbell_motion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Motion',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.MOTION: 'motion'>,
    'original_icon': None,
    'original_name': 'Motion',
    'platform': 'nest_legacy',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'motion',
    'unique_id': '18B430CCCCCC0002-motion',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[event.front_door_front_door_doorbell_motion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by Google/Nest',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'motion',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'camera_motion',
        'camera_person',
        'camera_sound',
        'camera_face',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Front Door Doorbell Motion',
    }),
    'context': <ANY>,
    'entity_id': 'event.front_door_front_door_doorbell_motion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[event.front_door_front_door_driveway_motion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'camera_motion',
        'camera_person',
        'camera_sound',
        'camera_face',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.front_door_front_door_driveway_motion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Motion',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.MOTION: 'motion'>,
    'original_icon': None,
    'original_name': 'Motion',
    'platform': 'nest_legacy',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'motion',
    'unique_id': '18B430DDDDDD0004-motion',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[event.front_door_front_door_driveway_motion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by Google/Nest',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'motion',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'camera_motion',
        'camera_person',
        'camera_sound',
        'camera_face',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Front Door Driveway Motion',
    }),
    'context': <ANY>,
    'entity_id': 'event.front_door_front_door_driveway_motion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
